# playwright-e2e

./: .containerignore  .gitignore  Containerfile  LICENSE  README.md  conftest.py  pyproject.toml  rotate-posts.py  run-e2e.sh
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
src/e2e/: rotate_posts.py  run_e2e.py
src/vpn/: conftest_vpn.py  vpn_manager.py
tests/: conftest.py  test_blog_navigation.py  test_sample_generic.py  test_seo_live.py
vpn/: conftest_vpn.py  vpn_manager.py
