[project]
name = "playwright-e2e"
version = "0.1.0"
description = "Ferramenta genérica de testes E2E com Playwright, VPN e simulação de comportamento real"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49.0",
    "pytest>=8.0",
    "pytest-playwright>=0.6.2",
    "pytest-html>=4.1",
    "pytest-xdist>=3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--html=reports/report.html",
    "--self-contained-html",
    "-v",
]
