[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playwright-e2e"
version = "0.1.0"
description = "Ferramenta genérica de testes E2E com Playwright, VPN e simulação de comportamento real"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49.0",
    "pytest>=8.0",
    "pytest-playwright>=0.6.2",
    "pytest-html>=4.1",
    "pytest-xdist>=3.5",
]

[project.scripts]
e2e = "e2e.run_e2e:main"
rotate-posts = "e2e.rotate_posts:main"

[tool.hatch.build.targets.wheel]
packages = ["src/e2e", "src/vpn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--html=reports/report.html",
    "--self-contained-html",
    "-v",
]
render_collapsed = false
